# afs-like-file-system

./: .gitignore  AfsClient.h  CMakeLists.txt  Makefile  README.md  cacheconsistencytest.c  client.cc  cmake_install.cmake  commonheaders.h  server.cc  test  test-2.c  test.c  test1.c  test_yu  test_yu.c
AFS_performance/: protocol_perf-part1  protocol_perf-part1.cpp  protocol_perf-part2.cpp  read_performance.cpp  write_performance  write_performance.cpp
AFS_scale/: README  clear_mount.sh  scale_cat.sh  scale_clients.sh  scale_test.c  scale_test.sh  scale_test2.sh  scale_test_read.c  scale_test_read.sh  scale_test_write.c  scale_test_write.sh
AFS_semantic_measurement/: cat1.sh  cat2.sh  cat3.sh  cat4.sh  cat_cache.sh  crash0.c  crash0.sh  test0.c  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c
protos/: afs.proto  timetest.proto
